# rs-card-validate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  luhn.rs
tests/: validate.rs
