[package]
name = "card-validate"
version = "2.3.0"
description = "Rust card validate detects and validates credit card numbers"
readme = "README.md"
license = "MIT"
edition = "2018"
homepage = "https://github.com/valeriansaliou/rs-card-validate"
repository = "https://github.com/valeriansaliou/rs-card-validate.git"
authors = [
  "Richard Protasov <richardprotasov@gmail.com>",
  "Valerian Saliou <valerian@valeriansaliou.name>"
]

[lib]
name = "card_validate"

[dependencies]
lazy_static = "1.0"
regex = "1.0"
